JBEHAVE-670:  Use property model with backing story context.

--- a/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/RunStory.html
+++ b/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/RunStory.html
@@ -12,7 +12,7 @@
                     <textarea wicket:id="input" rows="25" cols="100"></textarea>
                 </p>
                 <p>
-                    Mata Filter (optional and only supported by JBehave Core 3.1+):
+                    Meta Filter (optional and only supported by JBehave Core 3.1+):
                 </p>
                 <p>
                     <textarea wicket:id="metaFilter" rows="2" cols="100"></textarea>
