--- a/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/SubmitStory.html
+++ b/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/SubmitStory.html
@@ -12,25 +12,20 @@
                     <textarea wicket:id="input" rows="25" cols="100"></textarea>
                 </p>
                 <p>
-                    Mata Filter (optional and only supported by JBehave Core 3.1+):
+                    Meta Filter (optional and only supported by JBehave Core 3.1+):
                 </p>
                 <p>
                     <textarea wicket:id="metaFilter" rows="2" cols="100"></textarea>
                 </p>
                 <p>
-                    <input wicket:id="runButton" type="submit" value="Run" />
+                    <input wicket:id="runButton" type="submit" value="Submit" />
                 </p> 
-            </fieldset>
-        </div>
-        <div id="storyOutput">    
-           <fieldset>
-                <legend>Story Output</legend>
                 <p>
                     <pre wicket:id="output">
                     </pre>
                 </p>
             </fieldset>
-         </div>        
+        </div>
     </form>
 </wicket:extend>
 </body>
