--- a/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/Template.html
+++ b/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/Template.html
@@ -25,7 +25,7 @@
                 <div class="menu-entry"><a href="steps/find">Find Steps</a></div>
                 <div class="menu-entry"><a href="story/run">Run Story</a></div>
                 <div class="menu-entry"><a href="story/submit">Submit Story</a></div>
-                <div class="menu-entry"><a href="story/view">Story View</a></div>
+                <div class="menu-entry"><a href="story/view">View Story</a></div>
             </div>
         </div>
     </div>    
