--- a/distribution/src/main/site/content/index.html
+++ b/distribution/src/main/site/content/index.html
@@ -6,25 +6,30 @@
 
 <body>
 
-<h2>What is JBehave Web?</h2>
+    <h2>What is JBehave Web?</h2>
 
-<p>JBehave Web is an extension of <a
-	href="http://jbehave.org/reference/latest">JBehave</a> framework
-providing a web integration layer for <a
-	href="http://en.wikipedia.org/wiki/Behavior_driven_development">Behaviour-Driven
-Development</a> (BDD).</p>
+    <p>
+        JBehave Web is an extension of <a
+            href="http://jbehave.org/reference/stable">JBehave Core</a>,
+        providing a web-related modules.
+    </p>
 
-<p>Features of JBehave Web include:</p>
+    <p>Features of JBehave Web include:</p>
 
-<ul>
-    <li>A <a href="using-web-queue.html">Web Queue</a> to allow
-    generic stories to be run asynchronously via a simple web interface.</li>
-	<li>A <a href="using-web-runner.html">Web Runner</a> to allow
-	generic stories to be run synchronously via a simple web interface.</li>
-	<li>A <a href="using-selenium.html">Selenium integration</a>
-	module to allow automation of stories for web applications using <a
-		href="http://seleniumhq.org">Selenium</a>.</li>
-</ul>
+    <ul>
+        <li>A <a href="using-web-runner.html">Web Runner</a> module
+            to run stories - both synchronously and asynchronously - via
+            a simple web interface. The Web Runner allows the running of
+            any type of story, not simply those related to web
+            technology. It provides a non-technical front-end that does
+            not require access to either a build system not to source
+            control.
+        </li>
+        <li>A <a href="using-selenium.html">Selenium
+                integration</a> module to verify web application behaviour
+            using <a href="http://seleniumhq.org">Selenium</a>.
+        </li>
+    </ul>
 
 
 </body>
