--- a/distribution/src/main/site/content/index.html
+++ b/distribution/src/main/site/content/index.html
@@ -11,26 +11,30 @@
     <p>
         JBehave Web is an extension of <a
             href="http://jbehave.org/reference/stable">JBehave Core</a>,
-        providing a web-related modules.
+        providing support for web-related access or functionality.
     </p>
 
-    <p>Features of JBehave Web include:</p>
+    <h3>Web Runner</h3>
 
-    <ul>
-        <li>A <a href="using-web-runner.html">Web Runner</a> module
-            to run stories - both synchronously and asynchronously - via
-            a simple web interface. The Web Runner allows the running of
-            any type of story, not simply those related to web
-            technology. It provides a non-technical front-end that does
-            not require access to either a build system not to source
-            control.
-        </li>
-        <li>A <a href="using-selenium.html">Selenium
-                integration</a> module to verify web application behaviour
-            using <a href="http://seleniumhq.org">Selenium</a>.
-        </li>
-    </ul>
+    <p>
+        The <a href="using-web-runner.html">Web Runner</a> provides a
+        non-technical front-end that does not require access to a build
+        system nor to source control. It allows the user to run stories
+        - both synchronously and asynchronously - via a simple web
+        interface. It also allows the user to find matching steps
+        methods and to explore steps patterns by auto-completion.
+    </p>
 
+    <h3>Selenium Integration</h3>
+
+    <p>
+        The <a href="using-selenium.html">Selenium integration</a>
+        module allows the user to drive the verification of web
+        application behaviour using <a href="http://seleniumhq.org">Selenium</a>.
+    </p>
+
+    <span class="followup">The Web Runner allows the running of
+        any type of story, not just those related to web behaviour. </span>
 
 </body>
 </html>
