--- a/distribution/src/main/site/content/source-repository.html
+++ b/distribution/src/main/site/content/source-repository.html
@@ -36,7 +36,7 @@
 
 <h2>GitHub clones</h2>
 
-<p>JBehave repos are replicated on <a href="http://github.com/jbehave">GitHub JBehave</a>, which some users find
+<p>JBehave repos are replicated on <a href="https://github.com/jbehave/jbehave-web">GitHub JBehave Web</a>, which some users find
 easier to manage git repos.  GitHub also tends to provide web-browsing URLs which are eaasier on the eye.</p>
 
 </body>
