--- a/distribution/src/main/site/content/using-selenium.html
+++ b/distribution/src/main/site/content/using-selenium.html
@@ -230,9 +230,9 @@ use of a same-thread executor.</span>
 <p><strong>NOTE</strong>: To get the Selenium based tests running in
 an automated way, you need to run both a webapp server, e.g. Jetty, and
 the Selenium server (only for the Selenium API, as the WebDriver API does not need it). See the <a
-	href="http://git.codehaus.org/gitweb.cgi?p=jbehave-web.git;a=tree;f=examples/trader-runner-selenium">trader
+	href="https://github.com/jbehave/jbehave-web/blob/master/examples/trader-runner-selenium">trader
 runner selenium example</a> and <a
-    href="http://git.codehaus.org/gitweb.cgi?p=jbehave-web.git;a=tree;f=examples/trader-runner-webdriver">trader
+    href="https://github.com/jbehave/jbehave-web/blob/master/examples/trader-runner-webdriver">trader
 runner webdriver example</a> for a way to do this using <a
 	href="http://maven.apache.org">Maven</a>.</p>
 
