JBEHAVE-707:  Added Selenium/Groovy/Pico archetype.

--- a/distribution/src/main/site/content/archetypes.html
+++ b/distribution/src/main/site/content/archetypes.html
@@ -13,7 +13,8 @@
 <p>JBehave Web offers archetypes for several usecases:</p>
 
 <ul>
-<li>jbehave-web-selenium-java-spring-archetype: use Selenium, Java and Spring</li>
+<li>jbehave-web-selenium-groovy-pico-archetype: use Selenium, Groovy for writing steps and Pico for dependency injection</li>
+<li>jbehave-web-selenium-java-spring-archetype: use Selenium, Java for writing step and Spring for dependency injection</li>
 </ul>
 
 <p>To generate a project from an archetype, first you need to select the archetype, then provide the information to create the concrete project from the archetype.  This information includes:</p>
