JBEHAVE-707:  Updated docs.

--- a/distribution/src/main/site/content/archetypes.html
+++ b/distribution/src/main/site/content/archetypes.html
@@ -21,7 +21,7 @@
 
 <ul>
 <li>your project groupId: e.g. com.example.app</li>
-<li>your project artifactId: e.g. app-core</li>
+<li>your project artifactId: e.g. app-stories</li>
 <li>your project version: e.g. 1.0-SNAPSHOT</li>
 <li>your project package:  by default, a proposed one will be derived from the groupId</li>
 </ul>
@@ -53,17 +53,18 @@ Choose a number or apply filter (format: [groupId:]artifactId, case sensitive co
 <script type="syntaxhighlighter" class="brush: plain">
 <![CDATA[
 Define value for property 'groupId': : com.example.app
-Define value for property 'artifactId': : app-core
+Define value for property 'artifactId': : app-stories
 [INFO] Using property: version = 1.0-SNAPSHOT
 Define value for property 'package': com.example.app: 
-[INFO] Using property: jbehaveCoreVersion = 3.5
+[INFO] Using property: jbehaveCoreVersion = 3.6
+[INFO] Using property: jbehaveWebVersion = 3.5
 [INFO] Using property: jbehaveSiteVersion = 3.1.1
 Confirm properties configuration:
 groupId: com.example.app
-artifactId: app-core
+artifactId: app-stories
 version: 1.0-SNAPSHOT
 package: com.example.app
-jbehaveCoreVersion: 3.5
+jbehaveCoreVersion: 3.6
 jbehaveWebVersion: 3.5
 jbehaveSiteVersion: 3.1.1
 Y: 
