JBEHAVE-707:  Added Selenium/Flash archetype.

--- a/distribution/src/main/site/content/archetypes.html
+++ b/distribution/src/main/site/content/archetypes.html
@@ -13,8 +13,9 @@
 <p>JBehave Web offers archetypes for several usecases:</p>
 
 <ul>
-<li>jbehave-web-selenium-groovy-pico-archetype: use Selenium, Groovy for writing steps and Pico for dependency injection</li>
-<li>jbehave-web-selenium-java-spring-archetype: use Selenium, Java for writing step and Spring for dependency injection</li>
+<li>jbehave-web-selenium-flash-archetype: use Selenium to verify Flash-based behaviour.</li>
+<li>jbehave-web-selenium-groovy-pico-archetype: use Selenium to verify web behaviour, using Groovy for writing steps and Pico for dependency injection.</li>
+<li>jbehave-web-selenium-java-spring-archetype: use Selenium to verify web behaviour, using Java for writing step and Spring for dependency injection.</li>
 </ul>
 
 <p>To generate a project from an archetype, first you need to select the archetype, then provide the information to create the concrete project from the archetype.  This information includes:</p>
