Upgraded to latest jbehave-core release.  Updated release notes.

--- a/distribution/src/main/site/content/release-notes.html
+++ b/distribution/src/main/site/content/release-notes.html
@@ -5,6 +5,15 @@
 </head>
 <body>
 
+<h1>JBehave Web - Version 3.5.4 (Jul 5, 2012)</h1>
+
+<h2>        Bug
+</h2>
+<ul>
+<li>[<a href='https://jira.codehaus.org/browse/JBEHAVE-793'>JBEHAVE-793</a>] -         jbehave-web-selenium fails with firefox 13.0.1
+</li>
+</ul>
+                 
 <h1>JBehave Web - Version 3.5.3 (Apr 30, 2012)</h1>
                     
 <h2>        Improvement
