Updated release notes

--- a/distribution/src/main/site/content/release-notes.html
+++ b/distribution/src/main/site/content/release-notes.html
@@ -5,6 +5,16 @@
 </head>
 <body>
 
+
+<h1>JBehave Web - Version 3.5.5 (Nov 25, 2012)</h1>
+                                    
+<h2>        Task
+</h2>
+<ul>
+<li>[<a href='http://jira.codehaus.org/browse/JBEHAVE-805'>JBEHAVE-805</a>] -         Upgrade to Selenium 2.26.0 and Selenium Fluent 1.6.3
+</li>
+</ul>
+        
 <h1>JBehave Web - Version 3.5.4 (Jul 5, 2012)</h1>
 
 <h2>        Bug
