--- a/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/Template.html
+++ b/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/Template.html
@@ -26,6 +26,7 @@
                 <div class="menu-entry"><a href="story/run">Run Story</a></div>
                 <div class="menu-entry"><a href="story/submit">Submit Story</a></div>
                 <div class="menu-entry"><a href="story/view">View Story</a></div>
+                <div class="menu-entry"><a href="wiki/index">Wiki Index</a></div>
             </div>
         </div>
     </div>    
@@ -33,7 +34,7 @@
 
 <div id="content"><wicket:child>child</wicket:child></div>
 
-<div id="footer"><a href="http://jbehave.org/">JBehave</a> &copy; 2003-2010
+<div id="footer"><a href="http://jbehave.org/">JBehave</a> &copy; 2003-2013
 </div> <!-- end footer --> 
 
 </div> <!-- end view -->
