JBEHAVE-968: Replaced velocity panel with list view.

--- a/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/IndexWiki.html
+++ b/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/IndexWiki.html
@@ -19,10 +19,11 @@
 			<div id="ouput">
 				<fieldset>
 					<legend>Resources</legend>
-					<p>
-					<pre wicket:id="resources" id="indexForm">
-                    </pre>
-					</p>
+					<span wicket:id="resourcesList">
+						<p>
+							<span wicket:id="name">Name</span> <span wicket:id="uri">URI</span>
+						</p>
+					</span>
 				</fieldset>
 			</div>
 		</form>
