JBEHAVE-968: Wiki resources are now loaded and shown on click..

--- a/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/IndexWiki.html
+++ b/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/IndexWiki.html
@@ -10,9 +10,7 @@
 					<legend>Wiki URI</legend>
 					<p>
 						<label wicket:id="uri"> </label>
-					</p>
-					<p>
-						<input wicket:id="updateButton" type="submit" value="Update" />
+						<input wicket:id="updateButton" type="submit" value="Update Resources" />
 					</p>
 				</fieldset>
 			</div>
@@ -21,7 +19,7 @@
 					<legend>Resources</legend>
 					<span wicket:id="resourcesList">
 						<p>
-							<span wicket:id="name">Name</span> <span wicket:id="uri">URI</span>
+							<a wicket:id="resource_link">Show</a> <span wicket:id="name">Name</span> 
 						</p>
 					</span>
 				</fieldset>
