JBEHAVE-968:  Added link to edit wiki page.

--- a/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/IndexWiki.html
+++ b/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/IndexWiki.html
@@ -19,7 +19,7 @@
 					<legend>Resources</legend>
 					<span wicket:id="resourcesList">
 						<p>
-							<a wicket:id="run_resource">Run</a> <a wicket:id="view_resource">View</a> <span wicket:id="name">Name</span> 
+							<a wicket:id="run_resource">Run</a> <a wicket:id="view_resource">View</a> <a wicket:id="edit_resource">Edit</a> <span wicket:id="name">Name</span> 
 						</p>
 					</span>
 				</fieldset>
