--- a/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/RunStory.html
+++ b/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/RunStory.html
@@ -1,41 +1,39 @@
 <html xmlns:wicket="http://wicket.apache.org/">
 <head>
-    <title>Run Story</title>
+<title>Run Story</title>
 </head>
 <body>
-<wicket:extend>
-    <form wicket:id="storyForm" class="storyForm">
-        <div id="storyInput">
-           <fieldset>
-                <legend>Story Input</legend>
-                <p>
-                    <textarea wicket:id="input" rows="25" cols="100"></textarea>
-                </p>
-                <p>
-                    Meta Filter (optional and only supported by JBehave Core 3.1+):
-                </p>
-                <p>
-                    <textarea wicket:id="metaFilter" rows="2" cols="100"></textarea>
-                </p>
-                <p>
-                    <input wicket:id="runButton" type="submit" value="Run" />
-                </p> 
-            </fieldset>
-        </div>
-        <div id="storyOutput">    
-           <fieldset>
-                <legend>Story Output</legend>
-                <p>
-                    <pre wicket:id="output">
+	<wicket:extend>
+		<form wicket:id="storyForm" class="storyForm">
+			<div id="storyInput">
+				<fieldset>
+					<legend>Story Input</legend>
+					<p>
+						<textarea wicket:id="input" rows="25" cols="100"></textarea>
+					</p>
+					<p>Meta Filter (optional):</p>
+					<p>
+						<textarea wicket:id="metaFilter" rows="2" cols="100"></textarea>
+					</p>
+					<p>
+						<input wicket:id="runButton" type="submit" value="Run" />
+					</p>
+				</fieldset>
+			</div>
+			<div id="storyOutput">
+				<fieldset>
+					<legend>Story Output</legend>
+					<p>
+					<pre wicket:id="output">
                     </pre>
-                </p>
-                <p>
-                    <pre wicket:id="failure">
+					</p>
+					<p>
+					<pre wicket:id="failure">
                     </pre>
-                </p>
-            </fieldset>
-         </div>        
-    </form>
-</wicket:extend>
+					</p>
+				</fieldset>
+			</div>
+		</form>
+	</wicket:extend>
 </body>
 </html>
