JBEHAVE-968: Start of wiki tree view.

--- a/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/Template.html
+++ b/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/Template.html
@@ -27,6 +27,7 @@
                 <div class="menu-entry"><a href="story/submit">Submit Story</a></div>
                 <div class="menu-entry"><a href="story/view">View Story</a></div>
                 <div class="menu-entry"><a href="wiki/index">Wiki Index</a></div>
+                <div class="menu-entry"><a href="wiki/tree">Wiki Tree</a></div>
             </div>
         </div>
     </div>    
