JBEHAVE-968:  Renamed IndexWiki page to WikiList.  WikiTree page used by default.  Minor renames in wiki tree classes.

--- a/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/WikiList.html
+++ b/web-runner/src/main/java/org/jbehave/web/runner/wicket/pages/WikiList.html
@@ -10,7 +10,10 @@
 					<legend>Wiki URI</legend>
 					<p>
 						<label wicket:id="uri"> </label>
-						<input wicket:id="updateButton" type="submit" value="Update Resources" />
+					</p>
+					<p>
+						<input wicket:id="updateButton" type="submit"
+							value="Update Resources" />
 					</p>
 				</fieldset>
 			</div>
@@ -19,8 +22,8 @@
 					<legend>Resources</legend>
 					<span wicket:id="resourcesList">
 						<p>
-							<a wicket:id="run_resource">Run</a> <a wicket:id="view_resource">View</a> <a wicket:id="edit_resource">Edit</a> 
-							<span wicket:id="path">Path</span> 
+							<a wicket:id="run_resource">Run</a> <a wicket:id="view_resource">View</a>
+							<a wicket:id="edit_resource">Edit</a> <span wicket:id="path">Path</span>
 						</p>
 					</span>
 				</fieldset>
